In the process of fixing this code, added rendering capabilites and increased functionality, still need to draw the route over and solve null pointer on init